# django-uniauth

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  runtests.py  tox.ini
.github/workflows/: run_tests.yml
demo_app/: README.md
demo_app/demo_app/: urls.py  views.py
demo_app/demo_app/templates/demo-app/: index.html
tests/: models.py  test_backends.py  test_commands.py  test_models.py  test_simple.py  test_tokens.py  test_utils.py  test_view_utils.py  urls.py  utils.py
uniauth/: admin.py  admin.pyi  apps.pyi  backends.py  backends.pyi  decorators.pyi  forms.py  forms.pyi  merge.py  merge.pyi  models.py  models.pyi  tokens.py  tokens.pyi  utils.py  utils.pyi  views.py  views.pyi
uniauth/management/commands/: add_institution.pyi  flush_tmp_users.py  migrate_cas.py  migrate_custom.py  migrate_custom.pyi
uniauth/migrations/: 0003_auto_20221107_2353.pyi
uniauth/static/uniauth/css/: style.css
uniauth/templates/uniauth/: base.html  logout.html  password-reset-verify-done.html  settings.html  verification-success.html
uniauth/urls/: all.py  cas_only.py
